--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.13.5",
     "@types/node": "^20.11.5",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
