--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.1",
     "jspdf": "^2.5.2",
     "next": "^15.0.0",
     "openai": "^4.104.0",
