--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pdf-lib/fontkit": "^1.1.1",
+    "@sparticuz/chromium": "^141.0.0",
+    "@types/uuid": "^10.0.0",
+    "html2pdf.js": "^0.12.1",
     "jspdf": "^2.5.2",
+    "multer": "^2.0.2",
     "next": "^15.0.0",
     "openai": "^4.104.0",
+    "pdf-lib": "^1.17.1",
+    "puppeteer-core": "^24.23.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "replicate": "^1.3.0",
+    "sharp": "^0.34.4",
+    "uuid": "^13.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
