fix: Исправлен REPLICATE_API_TOKEN и добавлен dotenv для тестирования
- Обновлен правильный токен Replicate API
- Добавлен dotenv пакет для тестирования API
- AI улучшение фото теперь работает корректно
- Готов к финальному деплою на Netlify

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@pdf-lib/fontkit": "^1.1.1",
     "@sparticuz/chromium": "^141.0.0",
     "@types/uuid": "^10.0.0",
+    "dotenv": "^17.2.3",
     "html2pdf.js": "^0.12.1",
     "jspdf": "^2.5.2",
     "multer": "^2.0.2",
