feat: Реализована неубиваемая загрузка файлов на Netlify
EPIC A: Принудительный Node.js runtime
- Добавлен runtime='nodejs' во все API endpoints
- Увеличены лимиты функций в netlify.toml (timeout: 25s, memory: 1024MB)

EPIC B: Надёжный приём файлов
- Обновлены пути /tmp/artistone/uploads и /tmp/artistone/generated
- Улучшена валидация размера файлов (клиент: 8MB, сервер: 10MB)
- Добавлена детальная диагностика создания директорий

EPIC C: Client-side preflight
- Улучшена валидация файлов на клиенте
- Обновлены лимиты и сообщения об ошибках
- Добавлена поддержка новых кодов ошибок

EPIC D: Direct-to-Cloud фоллбэк
- Создан endpoint /api/upload-direct для альтернативной загрузки
- Добавлена поддержка UPLOAD_STRATEGY environment variable

EPIC E: Диагностика и ошибки
- Унифицированы коды ошибок (ERR_SIZE_LIMIT, ERR_TMP_ACCESS, etc.)
- Улучшен debug endpoint с детальной информацией
- Добавлены человекочитаемые сообщения об ошибках

EPIC G: UX улучшения
- Обновлены сообщения об ошибках на русском языке
- Улучшена обработка ошибок enhancement
- Добавлены подсказки для пользователей

--- a/netlify.toml
+++ b/netlify.toml
@@ -38,10 +38,17 @@
   [headers.values]
     Cache-Control = "public, max-age=3600"
 
+# DECISION-FN-CONFIG-001: Конфигурация функций для загрузки файлов
+[functions]
+  # Увеличиваем таймаут и память для функций загрузки
+  timeout = 25
+  memory = 1024
+
 # Environment variables (добавить через Netlify Dashboard)
 # Обязательные переменные:
 # - OPENAI_API_KEY
 # - REPLICATE_API_TOKEN  
 # - NEXT_PUBLIC_BASE_URL
+# - UPLOAD_STRATEGY (server|direct)
 # https://app.netlify.com/sites/YOUR-SITE/settings/deploys#environment
 
